src/test/deca/context/invalid/test_error_3.72-4.deca
// Description:
//    Soulève l'erreur (3.72)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 19 : Nombre de paramètres incorrect (règle 3.72)
//
// Historique:
//      cree le 06/01/2022

class A{
    void m(int i){
    }
}

{
	int b;
    A a;
    b = a.m();
}
